# rye-docker-fastapi-template

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
