[project]
name = "rye-docker-fastapi-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rintaroKaratsu", email = "r1ntaro1110@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_docker_fastapi_template"]
